[package]
name = "ruins"
version = "0.0.2"
authors = ["Vladimir Zvezda"]
edition = "2021"
license = "MIT"
keywords = ["ui", "gui"]
readme = "README.md"
repository = "https://github.com/vzvezda/ruins"
categories = ["gui"]
description = "User interface library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
